--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,18 @@
 doctype html
+      
 html
   head
-    title= title
+    title InnSight: Find your dream vacation.
     link(rel='stylesheet', href='/stylesheets/output.css')
-  body
-    block content
+    link(rel='icon', href='/images/hotel_logo.png')
+  body(class="grid h-full place-items-center bg-no-repeat bg-fixed bg-[radial-gradient(ellipse_at_top_left,_var(--tw-gradient-stops))] from-slate-950 to-slate-700 bg-gradient-to-r")
+    
+    div.container.flex.items-center.flex-col.justify-center.max-w-6xl
+      div.w-full.p-4
+        div.w-fit
+          div.flex.flex-col.rounded-full.bg-yellow-200.left-0.w-32.h-32.relative
+            img(src="images/hotel_logo.png", alt="hotel logo" class="w-48 h-48")
+          h1.text-2xl.text-center.text-yellow-50 InnSight
+      hr.w-screen.border-slate-700.mb-16.mt-4.border-1
+          
+      block content
