--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,11 +8,20 @@ html
   body(class="grid h-full place-items-center bg-no-repeat bg-fixed bg-[radial-gradient(ellipse_at_top_left,_var(--tw-gradient-stops))] from-slate-950 to-slate-700 bg-gradient-to-r")
     
     div.container.flex.items-center.flex-col.justify-center.max-w-6xl
-      div.w-full.p-4
-        div.w-fit
-          div.flex.flex-col.rounded-full.bg-yellow-200.left-0.w-32.h-32.relative
-            img(src="images/hotel_logo.png", alt="hotel logo" class="w-48 h-48")
-          h1.text-2xl.text-center.text-yellow-50 InnSight
-      hr.w-screen.border-slate-700.mb-16.mt-4.border-1
+      div.w-full.p-4.flex.flex-row.items-center.gap-16
+        div.w-fit.justify-center.items-center.flex.flex-row
+          a(href="/") 
+            div.flex.flex-col.rounded-full.bg-yellow-200.left-0.w-16.h-16.relative
+              img(src="images/hotel_logo.png", alt="hotel logo" class="w-24 h-24")
+          a(href="/") 
+            h1.text-center.text-yellow-50.text-xl.ml-2 InnSight
+        div.w-16
+        a.text-slate-50.text-lg(href="/countries") Locations
+        a.text-slate-50.text-lg(href="/hotels") Hotels
+        a.text-slate-50.text-lg(href="/rooms") Rooms
+      hr.w-screen.border-slate-700.mb-16.border-1
+      
           
       block content
+      
+    div.h-8
