--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,7 +12,7 @@ html
         div.w-fit.justify-center.items-center.flex.flex-row
           a(href="/") 
             div.flex.flex-col.rounded-full.bg-yellow-200.left-0.w-16.h-16.relative
-              img(src="images/hotel_logo.png", alt="hotel logo" class="w-24 h-24")
+              img(src="/images/hotel_logo.png", alt="hotel logo" class="w-24 h-24")
           a(href="/") 
             h1.text-center.text-yellow-50.text-xl.ml-2 InnSight
         div.w-16
