--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,7 +7,7 @@ html
     link(rel='icon', href='/images/hotel_logo.png')
   body(class="grid h-full place-items-center bg-no-repeat bg-fixed bg-[radial-gradient(ellipse_at_top_left,_var(--tw-gradient-stops))] from-slate-950 to-slate-700 bg-gradient-to-r")
     
-    div.flex.items-center.flex-col.justify-center
+    div.flex.items-center.flex-col.justify-center.w-full
       div.w-full.p-4.flex.flex-row.items-center.gap-16.max-w-2xl
         div.w-fit.justify-center.items-center.flex.flex-row
           a(href="/") 
@@ -17,9 +17,7 @@ html
             h1.text-center.text-yellow-50.text-xl.ml-4.whitespace-nowrap Inn Site
         div.w-16
         a.text-slate-50.text-lg(href="/countries") Locations
-        a.text-slate-50.text-lg(href="/hotels") Hotels
-        a.text-slate-50.text-lg(href="/rooms") Rooms
-      hr.w-screen.border-slate-700.mb-16.border-1
+      hr.w-full.border-slate-700.mb-16.border-1
       
           
       block content
